# cpp-project

./: .gitignore  appveyor.yml  conanfile.py  meson.build  meson_options.txt  readme.md
.ci/: build.py  install.py  test.py
src/main/exe/: main.cc  meson.build
src/main/exe/include/: constants.hpp  meson.build  project.hpp
src/main/exe/src/: meson.build  project.cc
src/test/cases/: meson.build  test.cc  test_runner.cc
