###################################################################################
#                                                                                 #
# NAME: src/main/exe/include/meson.build                                          #
#                                                                                 #
# AUTHOR: Michael Brockus.                                                        #
#                                                                                 #
# CONTACT: <mailto:michael@squidfarts.com>                                        #
#                                                                                 #
# NOTICES:                                                                        #
#                                                                                 #
# License: Apache 2.0 :http://www.apache.org/licenses/LICENSE-2.0                 #
#                                                                                 #
###################################################################################



exe_dir = include_directories('.')

install_headers('project.hpp', 'constants.hpp')